changed image path

--- a/templates/kids.html
+++ b/templates/kids.html
@@ -64,11 +64,11 @@
 
 <script>
 const kidImgs = [
-"images/1.avif",
-"images/2.avif",
-"images/3.avif",
-"images/4.avif",
-"images/5.avif"
+"../static/images/1.avif",
+"../static/images/2.avif",
+"../static/images/3.avif",
+"../static/images/4.avif",
+"../static/images/5.avif"
 ];
 for (let i = 1; i <= 20; i++) {
   let img = kidImgs[i % kidImgs.length];
