--- a/templates/women.html
+++ b/templates/women.html
@@ -63,11 +63,11 @@
     <div class="carousel" id="womenTrack">
       <script>
       const womenImgs = [
-      "images/w_1.webp",
-      "images/w_2.webp",
-      "images/w_3.webp",
-      "images/w_4.webp",
-      "images/w_5.webp"
+      "../static/images/w_1.webp",
+      "../static/images/w_2.webp",
+      "../static/images/w_3.webp",
+      "../static/images/w_4.webp",
+      "../static/images/w_5.webp"
       ];
 
        const womenPrice = [
