--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,17 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Janya Fashions</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="/static/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<script src="script.js" ></script>
+<script src="/static/script.js" ></script>
+<style>
+  
+  img {
+    width: 200px;
+    height: 10px;
+    border-radius: 10px;
+  }
+</style>
 </head>
 <body>
 
@@ -21,9 +29,9 @@
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
 
      <nav id="smallMenu" class="small-menu">
-        <a href="index.html">Home</a>
-        <a href="women.html">Women</a>
-        <a href="kids.html">Kids</a>
+      <a href="{{ url_for('index') }}">Home</a>
+      <a href="{{ url_for('women') }}">Women</a>
+      <a href="{{ url_for('kids') }}">Kids</a>
         <a href="#contact">Contact</a>
       </nav>
 
@@ -153,11 +161,6 @@
   🛒
   <span id="floatingCartCount" class="floating-cart-count">0</span>
 </div>
-<div>
-    {% for img in images %}
-        <img src="/images/{{ img }}" alt="{{ img }}">
-    {% endfor %}
-</div>
-  
+
 </body>
 </html>
